
	Made Tab and Shift-Tab in interactive search prompts (including when
	navigating) move cursor to next/previous search match.  Thanks to
	David Sierra DiazGranados (a.k.a. davidsierradz).

	Somewhat improve documentation on functional keys.

	Updated autotools scripts.  Thanks to phanium (a.k.a. phanen).

	Perform sorting of completion items after doing Unicode normalization.

	Fixed line number column not including padding to the left of it.

	Fixed local options not being loaded on Ctrl-W x.

	Fixed graphics of view mode not being hidden on activating menu, more or
	file info modes.

	Fixed descriptions of exit :commands in menus (visible during popup
	completion).

	Fixed statusbar output not being preserved on running commands from
	:history menus.

	Fixed not being able to pick a symbolic link to a directory via
	--choose-files or --on-choose by selecting and opening it.

	Fixed 'slowfs' option not being applied to targets of symbolic links on
	operations related to directory sizes.  Thanks to rok (a.k.a. aca).

	Fixed running long shell commands when fish is used.  Caused by its
	inability to understand that "${var}" is the same as "$var".  Thanks to
	aleksejrs.

	Fixed a historical omission of Ctrl-G not being available in some prompts:
	file rename on conflict; owner, group and symbolic link target change.
	Thanks to Branislav Gerazov.

	Fixed display issues or a crash when using a terminal with more than 32768
	color pairs.  Thanks to iboggs and itshog.

	Fixed performance degradation after preview consumes lots of color pairs.

	Fixed running tests with musl libc.  Thanks to Henrik Holst (a.k.a.
	hholst80).

	Fixed IPC payloads larger than 8155 bytes.  Patch by Marcin
	Kurczewski (a.k.a. rr-).

	Fixed abort on instance sending something over IPC to itself.  Thanks to
	Marcin Kurczewski (a.k.a. rr-).

	Fixed "N files selected" message appearing in menus on waiting for
	multikey input (regression in 0.12-beta).
